tests/should_fail/bug/1519.stderr
error: Could not generate a term for RA::le
  --> 1519.rs:36:5
   |
36 |     fn le(self, other: Self) -> bool;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: The trait function is not implemented here
  --> 1519.rs:42:1
   |
42 | / impl<T, U> RA for (T, U)
43 | | where
44 | |     T: RA,
45 | |     U: RA,
   | |__________^

error: aborting due to 1 previous error

